fix update and srt anotatios swagger
