# app/Http/Controllers/AuthController.php
@@ -9,12 +9,53 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Annotations as OA;
 
 
-
+/**
+ * @OA\Info(
+ *      version="1.0.0",
+ *      title="API club deportivo",
+ *      description="API Reservas club deportivo"
+ *)
+ *
+ *
+ * @OA\Server(
+ *     url=L5_SWAGGER_CONST_HOST,
+ *     description="API Reservas"
+ * )
+ * **/
 class AuthController extends Controller
 {
+    /**
+     * @OA\Post(
+     *     path="/api/register",
+     *     summary="Registrar un nuevo usuario",
+     *     tags={"CRUD Usuarios"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Datos para registrar un nuevo usuario",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="NombreUsuario"),
+     *             @OA\Property(property="email", type="string", format="email", example="usuario@dominio.com"),
+     *             @OA\Property(property="password", type="string", example="contrasena"),
+     *             @OA\Property(property="password_confirmation", type="string", example="contrasena")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Usuario registrado exitosamente",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="user", type="object"),
+     *             @OA\Property(property="token", type="string", example="token_de_autenticacion")
+     *         )
+     *     ),
 
+     * )
+     *
+     * @param Request $request
+     * @return JsonResponse
+     */
     public function register(Request $request): JsonResponse
     {
 
@@ -57,9 +98,8 @@ class AuthController extends Controller
 
     public function logout(): JsonResponse
     {
-        auth()->user()->tokens()->delete();
-
-        return response()->json(['message' => 'Cierre de sesión exitoso'], 200);
+        Auth::user()->tokens()->delete();
+        return response()->json(['message' => 'Cierre de sesión exitoso'], 201);
     }
 
     /**
@@ -108,16 +148,27 @@ class AuthController extends Controller
      */
     public function update(Request $request): JsonResponse
     {
-        $user = auth()->user();
-        $user->email = $request->get('email');
+        $request->validate([
+            'email' => 'required|string|email|max:255',
+            'password' => 'required|string|min:8',
+            'newPassword' => 'required|string|min:8',
+            ]);
 
-        if($request->get('password')){
-            $user->password = Hash::make($request->get('password'));
+        $email = $request->input('email');
+        $password = $request->input('password');
+        $newPassword = $request->input('newPassword');
+
+
+        $user = auth()->user();
+        $pass = $user->getAuthPassword();
+        if (!Hash::check($password, $pass)) {
+            return response()->json(['error' => 'Contraseña actual incorrecta'], 401);
         }
 
+        $user->password = Hash::make($newPassword);
         $user->save();
-        return response()
-            ->json(['message'=>'Usuario actualizado'],201);
+
+        return response()->json(['message' => 'Contraseña actualizada exitosamente']);
     }
 
 
